--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       </div>
       <div class="email-footer">
-        <p>Ave. Etchojoa 30-A , Navojoa, Sonora, 85890. <br> Contacto WhatsApp: 642 421 2607 <br> yooktured@gmail.com </p>
+        <p>Ave. Etchojoa 30-A , Navojoa, Sonora, 85890. <br> Contacto WhatsApp: 642 421 2607 <br> tesoreria@yook.mx </p>
       </div>
     </div>
   </body>
