datos de la cuenta

--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
 
 }
 
+.DatosCuenta h2{
+  text-align: left;
+  margin-left: 50px;
+  margin-right: 50px;
+  font-size: 25px;
+
+}
+
 .infoPago h1{
   text-align: center;
   text-transform: capitalize;
@@ -117,14 +125,24 @@
           <h1 style="font-weight: normal;">Concepto:</h1>
           <h2><mark>*Insertar Concepto*</mark></h2>
 
-          <h1 style="font-size: 30px;">Datos de la cuenta:</h1>
-          <h2 style="font-weight: normal; font-size: 25px;">*Insertar Datos de la Cuenta*</h2>
+          <div class="DatosCuenta">
+
+            <h1 style="font-size: 30px;">Datos de la cuenta:</h1>
+            <h2 style="font-weight: normal; font-size: 20px;">
+              Banco: <span>BANCOMER</span> <br>
+              Número de cuenta: <span style="font-weight: bold;">0116602851</span> <br>
+              CLABE Interbancaria: <span style="font-weight: bold;">012777001166028518</span> <br>
+              Producto/Subproducto: <span>01/0301 CASH MANAGEMENT M.N S/INT.</span> <br>
+              Divisa: <span>MXP Pesos Mexicanos</span> 
+            </h2>
+
+          </div>
 
         </div>
 
       </div>
       <div class="email-footer">
-        <p>Ave. Etchojoa 30-A , Navojoa, Sonora, 85890. <br> Contacto WhatsApp: 642 421 2607 <br> tesoreria@yook.mx </p>
+        <p>Ave. Etchojoa 503-B , Navojoa, Sonora, 85890. <br> Contacto WhatsApp: 642 421 2607 <br> tesoreria@yook.mx </p>
       </div>
     </div>
   </body>
